<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/menu_close"
        android:layout_width="20dp"
        android:layout_height="20sp"
        android:src="@drawable/ic_x"
        android:layout_margin="25sp"/>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menu_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/menu_asistente"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asistente"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/menu_ar"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ar"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/menu_perfil"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/menu_salir"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>