<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrate"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="70dp"/>

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="15sp"
                android:textColor="@color/white"
                android:hint="@string/nombre"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"/>
            <TextView
                android:id="@+id/txtNameValidation"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:textColor="#ff0000"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/register_phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="15dp"
                android:textColor="@color/white"
                android:maxLength="9"
                android:hint="@string/celular"
                android:textColorHint="@color/white"
                android:paddingStart="7dp"/>
            <TextView
                android:id="@+id/txtPhoneValidation"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:textColor="#ff0000"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/regiter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="15sp"
                android:textColor="@color/white"
                android:hint="@string/correo_electronico"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"/>
            <TextView
                android:id="@+id/txtEmailValidation"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:textColor="#ff0000"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/regiter_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="15sp"
                android:textColor="@color/white"
                android:hint="@string/contransena"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"/>
            <TextView
                android:id="@+id/txtPassValidation"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:textColor="#ff0000"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/register_register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/botton_border"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:padding="17sp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/registrar"/>

            <LinearLayout
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="O"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_google"
                android:layout_marginTop="30dp"
                android:background="@drawable/botton_white_border"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:padding="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google_2"/>
                <TextView
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/continuar_con_google"
                    android:layout_marginTop="15sp"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_account"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginStart="100dp"/>
                <TextView
                    android:id="@+id/register_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>